tests/negative/test_expr_asgn_cn.orb
fnc main() () {
    let (x:(i32 cn) 100);
    += x 1;
};